# yandex-test-contest

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
a-stones-and-jewels/: CMakeLists.txt  README.md  solution.cpp
b-ones-sequence/: CMakeLists.txt  README.md  solution.cpp
c-remove-duplicates/: CMakeLists.txt  README.md  solution.cpp
d-parentheses/: CMakeLists.txt  README.md  solution.cpp
e-anagrams/: CMakeLists.txt  README.md  solution.cpp
g-interesting-trip/: CMakeLists.txt  README.md  solution.cpp
